events and text overlap issue fix

--- a/docs/src/assets/styles/index.scss
+++ b/docs/src/assets/styles/index.scss
@@ -249,7 +249,7 @@ button {
     border-bottom: 1px solid var(--border-color);
     display: block;
     width: 100%;
-    margin: 0 auto;
+    margin: 5px auto;
 }
 
 
@@ -295,7 +295,7 @@ summary.title  {
 
 }
 
- 
+
 a.anchor {
     position: absolute;
     text-decoration: none;
@@ -305,7 +305,7 @@ a.anchor {
     font-size: .8em;
     font-weight: 400;
     padding-top: 0.05em;
-}    
+}
 
 
 .introCard     {
@@ -368,7 +368,7 @@ a.anchor {
    .introCard {
         width: 100%;
     }
-    
+
     .boxDiv {
         width: 100%;
     }
@@ -376,7 +376,7 @@ a.anchor {
     .boxHalfWidth {
         width: 100%;
     }
-    
+
     .tableContainer {
 	overflow: scroll;
 }
