--- a/docs/src/components/Document/index.scss
+++ b/docs/src/components/Document/index.scss
@@ -9,7 +9,6 @@
     color: var(--primary-color);
     padding-left: $document-padding;
 
-    
 
     .documentView {
         min-height: 75vh;
@@ -45,13 +44,14 @@
 
     img {
         width: 100%;
-        
-        
+
+
     }
 
     pre {
         white-space: pre-wrap;
         background: var(--code-block-color);
+        width: auto;
         padding: 20px;
         display: flex;
         font-family: $font-family-code;
@@ -68,7 +68,7 @@
         &:hover {
             .wrapperContainer {
                 visibility: visible;
-               
+
             }
         }
 
@@ -144,8 +144,8 @@
             background-color: var(--table-header-color);
             position: sticky;
             top: 0;
-            
-            
+
+
         }
 
         td {
@@ -184,6 +184,7 @@
         font-size: $font-size-h4;
         margin-top: $sub-title-margin;
         font-weight: $font-weight-normal;
+        margin-bottom: $sub-title-margin-h5;
     }
 
     h5 {
@@ -193,7 +194,7 @@
         font-weight: $font-weight-bold;
         color: var(--primary-color);
     }
-    
+
     ol > li {
         &::marker {
             font-weight: $font-weight-normal;
@@ -204,7 +205,7 @@
             margin-left: 5px;
         }
     }
- 
+
     ul > li {
         &::marker {
             font-weight: $font-weight-normal;
@@ -215,7 +216,7 @@
             margin-left: 5px;
         }
     }
- 
+
 
     .hdlist {
         tr,
@@ -258,8 +259,8 @@
     .ulist {
         ul {
             padding-inline-start: $padding-md;
-            
-            
+
+
         }
     }
 
